--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parchment-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.0-dev",
   "type": "module",
   "scripts": {
     "dev": "vite && prettier --write .",
